// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListContainer > should render all the items 1`] = `
<div>
  <ul
    class="HvListContainer-root"
  >
    <li
      class="HvListItem-root HvListItem-gutters css-afmqz3-StyledListItem e1palmq41"
      role="option"
    >
      Item 1
    </li>
    <li
      class="HvListItem-root HvListItem-gutters css-afmqz3-StyledListItem e1palmq41"
      role="option"
    >
      Item 2
    </li>
    <li
      class="HvListItem-root HvListItem-gutters css-afmqz3-StyledListItem e1palmq41"
      role="option"
    >
      Item 3
    </li>
  </ul>
</div>
`;

exports[`ListContainer > should render correctly 1`] = `
<div>
  <ul
    class="HvListContainer-root"
  />
</div>
`;
